@@ -6,6 +6,8 @@ Revelation changelog
 
 	* implemented initial applet searching
 
+	* a few applet ui improvements
+
 2005-07-06  Erik Grinaker <erikg@codepoet.no>
 
 	* improved the applet button behavior
